row overflow fixes

--- a/themes/CDN/assets/less/app.less
+++ b/themes/CDN/assets/less/app.less
@@ -58,7 +58,6 @@ h4.title {
    margin: 0 auto;
    padding: 0 0;
    position:relative;
-   overflow:hidden;
 }
 .row-fluid {
    width: 96%;
@@ -691,6 +690,12 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
    header {
       img {
          width: 100%;
+      }
+   }
+   .container {
+      overflow:hidden;
+      .row {
+         padding-top: 40px;
       }
    }
    footer {
